# player_gstreamer

./: .clang-format  CMakeLists.txt  custom_bin.cpp  custom_bin.h  main.cpp  player  window.cpp  window.h
